fix grid gap

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   justify-items: center;
   align-items: center;
   margin: 0 15%;
-  column-gap: 5%;
+  column-gap: 2%;
 }
 
 .App .forms > div:nth-child(1) {
